--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 body {
 	
 }
-.section__header {
+header {
 	
 	background-image: url(../img/bc_h.png);
 	background-color: black;	
@@ -22,6 +22,12 @@ body {
 	width: 40px;
 	height: 30px;
 	padding-top: 30px;
+}
+
+.headline {
+	
+	margin: 0 auto;
+	
 }
 
 .text__anchor  {
