changes in back

--- a/css/footer1.css
+++ b/css/footer1.css
@@ -81,7 +81,7 @@
 
 .section_contact  {
 	background: url(../pic/f9g2fipusyc7iybhyi2p-09-copy-2.png) no-repeat #000000;
-	/* background-size: cover; */
+	 background-size: cover; 
 } 
 
 .content_contact .g_title {
