--- a/css/footer1.css
+++ b/css/footer1.css
@@ -79,6 +79,9 @@
 	margin: 0 auto;	
 }
 
+.section_contact {
+	margin: 0 auto;	
+}
 .section_contact  {
 	background: url(../pic/f9g2fipusyc7iybhyi2p-09-copy-2.png) no-repeat #000000;
 	 background-size: cover; 
